--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <h1>Rodrigo Silva</h1>
         <h2>Back-end Developer</h2>
         <div class="social-media">
-            <a href="#">Linkedin</a>
-            <a href="#">Github</a>
+            <a href="https://www.linkedin.com/in/rodrigo-silva-186702138">Linkedin</a>
+            <a href="https://github.com/rodrigo-92-srb/">Github</a>
         </div>
     </header>
     <main class="container">
